# systemd-compose

./: Cargo.toml  README.md  build.rs  go.mod  go.sum
pkg/convert/: convert.go  convert_test.go  service.go
src/: bin.rs  compose.rs  convert.rs  lib.rs
tests/: generate.rs
tests/compose-files/: docker-compose.yml
