[package]
name = "systemd_compose"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemd_schema = { git = "https://github.com/Aposhian/systemd-schema" }
serde_ini = "0.2.0"
schemafy = "0.6.0"
serde = "^1.0"
serde_json = "^1.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
schemafy_lib = "0.6.0"
serde_json = "^1.0"